--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,43 @@
     height: 100vh;
     width: 100%;
 }
+.file_explorer{
+    margin: 5px;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    width: 30%;
+    align-items: center;
+    border-right: 1px solid gray;
+}
+
+.file_explorer h5{
+    font-size: 24px;
+}
+
+hr{
+    height: 0.4px solid;
+    width: 80%;
+}
+.files{
+    display: flex;
+    flex-direction: column;
+    padding-top: 30px;
+    width: 100%;
+} 
+.files button{
+    padding: 10px;
+    margin: 5px;
+    background-color: rgb(18, 18, 46);
+    border: 0.4px solid gray;
+    cursor: pointer;
+    outline: none;
+    color: white;
+    border-radius: 10px;
+}
+.files button:hover{
+    background-color: orange;
+}
 .editors{
     position: relative;
     display: flex;
