--- a/src/components/Editor.css
+++ b/src/components/Editor.css
@@ -1,9 +1,9 @@
 .editor{
-    height: 40%;
-    width: 300px;
+    height: 100vh;
+    width: 100%;
     display: flex;
     flex-direction: column;
-    border-right: 3px solid gray;
+    border-right: 5px solid black;
 }
 
 .view{
@@ -20,7 +20,8 @@
 }
 .editor_header h4{
     padding: 4px;
-    width: 100%
+    width: 100%;
+    color: rgb(170, 170, 204)
 }
 
 .CodeMirror{
